@@ -18,13 +18,16 @@ package org.springframework.xd.dirt.stream;
 
 
 import java.util.ArrayList;
+import java.util.Deque;
+import java.util.HashMap;
+import java.util.LinkedList;
 import java.util.List;
+import java.util.Map;
 
 import org.springframework.data.repository.CrudRepository;
 import org.springframework.util.Assert;
 import org.springframework.validation.BindException;
 import org.springframework.xd.dirt.core.BaseDefinition;
-import org.springframework.xd.dirt.module.CompositeModuleDeploymentRequest;
 import org.springframework.xd.dirt.module.ModuleDefinitionRepository;
 import org.springframework.xd.dirt.module.ModuleDeploymentRequest;
 import org.springframework.xd.dirt.module.NoSuchModuleException;
@@ -38,24 +41,50 @@ import org.springframework.xd.dirt.stream.dsl.StreamConfigParser;
 import org.springframework.xd.dirt.stream.dsl.StreamNode;
 import org.springframework.xd.module.ModuleDefinition;
 import org.springframework.xd.module.ModuleType;
+import org.springframework.xd.module.core.CompositeModule;
 import org.springframework.xd.module.options.ModuleOptionsMetadata;
 import org.springframework.xd.module.options.ModuleOptionsMetadataResolver;
 
 /**
+ * Parser to convert a DSL string for a stream into a list of
+ * {@link org.springframework.xd.dirt.module.ModuleDeploymentRequest}
+ * objects that comprise the given stream.
+ *
  * @author Andy Clement
  * @author Gunnar Hillert
  * @author Glenn Renfro
  * @author Mark Fisher
+ * @author Patrick Peralta
  * @since 1.0
  */
 public class XDStreamParser implements XDParser {
 
+	/**
+	 * Optional definition repository used to obtain sub-stream/label
+	 * references.
+	 *
+	 * @see org.springframework.xd.dirt.stream.dsl.StreamConfigParser
+	 */
 	private CrudRepository<? extends BaseDefinition, String> repository;
 
+	/**
+	 * Repository for user defined modules.
+	 */
 	private final ModuleDefinitionRepository moduleDefinitionRepository;
 
+	/**
+	 * Resolver for module options metadata.
+	 */
 	private final ModuleOptionsMetadataResolver moduleOptionsMetadataResolver;
 
+
+	/**
+	 * Construct an {@code XDStreamParser}.
+	 *
+	 * @param repository                     repository for stream definitions (optional)
+	 * @param moduleDefinitionRepository     repository for user defined modules
+	 * @param moduleOptionsMetadataResolver  resolver for module options metadata
+	 */
 	public XDStreamParser(CrudRepository<? extends BaseDefinition, String> repository,
 			ModuleDefinitionRepository moduleDefinitionRepository,
 			ModuleOptionsMetadataResolver moduleOptionsMetadataResolver) {
@@ -66,103 +95,126 @@ public class XDStreamParser implements XDParser {
 		this.moduleOptionsMetadataResolver = moduleOptionsMetadataResolver;
 	}
 
+	/**
+	 * Construct an {@code XDStreamParser}.
+	 *
+	 * @param moduleDefinitionRepository     repository for user defined modules
+	 * @param moduleOptionsMetadataResolver  resolver for module options metadata
+	 */
 	public XDStreamParser(ModuleDefinitionRepository moduleDefinitionRepository,
 			ModuleOptionsMetadataResolver moduleOptionsMetadataResolver) {
 		this(null, moduleDefinitionRepository, moduleOptionsMetadataResolver);
 	}
 
+	/**
+	 * {@inheritDoc}
+	 */
 	@Override
 	public List<ModuleDeploymentRequest> parse(String name, String config, ParsingContext parsingContext) {
 
 		StreamConfigParser parser = new StreamConfigParser(repository);
 		StreamNode stream = parser.parse(name, config);
-		List<ModuleDeploymentRequest> requests = new ArrayList<ModuleDeploymentRequest>();
+		Deque<ModuleDeploymentRequest.Builder> builders = new LinkedList<ModuleDeploymentRequest.Builder>();
 
 		List<ModuleNode> moduleNodes = stream.getModuleNodes();
 		for (int m = moduleNodes.size() - 1; m >= 0; m--) {
 			ModuleNode moduleNode = moduleNodes.get(m);
-			ModuleDeploymentRequest request = new ModuleDeploymentRequest();
-			request.setGroup(name);
-			request.setModule(moduleNode.getName());
-			request.setIndex(m);
+			ModuleDeploymentRequest.Builder builder =
+					new ModuleDeploymentRequest.Builder()
+							.setGroup(name)
+							.setModuleName(moduleNode.getName())
+							.setIndex(m);
 			if (moduleNode.hasArguments()) {
 				ArgumentNode[] arguments = moduleNode.getArguments();
-				for (int a = 0; a < arguments.length; a++) {
-					request.setParameter(arguments[a].getName(), arguments[a].getValue());
+				for (ArgumentNode argument : arguments) {
+					builder.setParameter(argument.getName(), argument.getValue());
 				}
 			}
-			requests.add(request);
+			builders.add(builder);
 		}
+
 		SourceChannelNode sourceChannel = stream.getSourceChannelNode();
-		SinkChannelNode sinkChannel = stream.getSinkChannelNode();
-
 		if (sourceChannel != null) {
-			requests.get(requests.size() - 1).setSourceChannelName(sourceChannel.getChannelName());
+			builders.getLast().setSourceChannelName(sourceChannel.getChannelName());
 		}
 
+		SinkChannelNode sinkChannel = stream.getSinkChannelNode();
 		if (sinkChannel != null) {
-			requests.get(0).setSinkChannelName(sinkChannel.getChannelName());
+			builders.getFirst().setSinkChannelName(sinkChannel.getChannelName());
 		}
 
 		// Now that we know about source and sink channel names,
 		// do a second pass to determine type. Also convert to composites.
 		// And while we're at it (and type is known), validate module name and options
-		List<ModuleDeploymentRequest> result = new ArrayList<ModuleDeploymentRequest>(requests.size());
-		for (ModuleDeploymentRequest original : requests) {
-			original.setType(determineType(original, requests.size() - 1, parsingContext));
+		List<ModuleDeploymentRequest> result = new ArrayList<ModuleDeploymentRequest>(builders.size());
+		for (ModuleDeploymentRequest.Builder builder : builders) {
+			builder.setType(determineType(builder, builders.size() - 1, parsingContext));
 
 			// definition is guaranteed to be non-null here
-			ModuleDefinition moduleDefinition = moduleDefinitionRepository.findByNameAndType(original.getModule(),
-					original.getType());
+			ModuleDefinition moduleDefinition = moduleDefinitionRepository
+					.findByNameAndType(builder.getModuleName(), builder.getType());
 			ModuleOptionsMetadata optionsMetadata = moduleOptionsMetadataResolver.resolve(moduleDefinition);
 			if (parsingContext.shouldBindAndValidate()) {
 				try {
-					optionsMetadata.interpolate(original.getParameters());
+					optionsMetadata.interpolate(builder.getParameters());
 				}
 				catch (BindException e) {
-					throw ModuleConfigurationException.fromBindException(original.getModule(), original.getType(), e);
+					throw ModuleConfigurationException.fromBindException(builder.getModuleName(),
+							builder.getType(), e);
 				}
 			}
 
-			result.add(convertToCompositeIfNecessary(original));
+			result.add(buildModuleDeploymentRequest(builder));
 		}
 		return result;
 	}
 
-	private ModuleType determineType(ModuleDeploymentRequest request, int lastIndex, ParsingContext parsingContext) {
-		ModuleType moduleType = maybeGuessTypeFromNamedChannels(request, lastIndex, parsingContext);
+	/**
+	 * For a given module builder, determine the type of module based on:
+	 * <ol>
+	 *     <li>module name</li>
+	 *     <li>module position in the stream</li>
+	 *     <li>presence of (or lack thereof) named channels</li>
+	 * </ol>
+	 *
+	 * @param builder          builder object
+	 * @param lastIndex        index of last module in the stream
+	 * @param parsingContext   parsing context
+	 * @return module type
+	 * @throws NoSuchModuleException if the module type does not exist
+	 */
+	private ModuleType determineType(ModuleDeploymentRequest.Builder builder, int lastIndex, ParsingContext parsingContext) {
+		ModuleType moduleType = determineTypeFromNamedChannels(builder, lastIndex, parsingContext);
 		if (moduleType != null) {
 			return moduleType;
 		}
-		String name = request.getModule();
-		int index = request.getIndex();
+		String name = builder.getModuleName();
+		int index = builder.getIndex();
 
 		Position position = Position.of(index, lastIndex);
 		ModuleType[] allowedTypes = parsingContext.allowed(position);
 		return verifyModuleOfTypeExists(name, allowedTypes);
-
-
 	}
 
 	/**
-	 * Attempt to guess the type of a module given the presence of named channels references at the start or end of the
-	 * stream definition.
-	 * 
-	 * @return a sure to be valid module type, or null if no named channels were present
+	 * Attempt to guess the type of a module given the presence of named channels
+	 * references at the start or end of the stream definition.
+	 *
+	 * @return module type, or null if no named channels were present
 	 */
-	private ModuleType maybeGuessTypeFromNamedChannels(ModuleDeploymentRequest request, int lastIndex,
+	private ModuleType determineTypeFromNamedChannels(ModuleDeploymentRequest.Builder builder, int lastIndex,
 			ParsingContext parsingContext) {
 		// Should this fail for composed module too?
 		if (parsingContext == ParsingContext.job
-				&& (request.getSourceChannelName() != null || request.getSinkChannelName() != null)) {
+				&& (builder.getSourceChannelName() != null || builder.getSinkChannelName() != null)) {
 			throw new RuntimeException("TODO");
 		}
 		ModuleType type = null;
-		String moduleName = request.getModule();
-		int index = request.getIndex();
-		if (request.getSourceChannelName() != null) { // preceded by >, so not a source
+		String moduleName = builder.getModuleName();
+		int index = builder.getIndex();
+		if (builder.getSourceChannelName() != null) { // preceded by >, so not a source
 			if (index == lastIndex) { // this is the final module of the stream
-				if (request.getSinkChannelName() != null) { // but followed by >, so not a sink
+				if (builder.getSinkChannelName() != null) { // but followed by >, so not a sink
 					type = ModuleType.processor;
 				}
 				else { // final module and no >, so IS a sink
@@ -173,7 +225,7 @@ public class XDStreamParser implements XDParser {
 				type = ModuleType.processor;
 			}
 		}
-		else if (request.getSinkChannelName() != null) { // followed by >, so not a sink
+		else if (builder.getSinkChannelName() != null) { // followed by >, so not a sink
 			if (index == 0) { // first module in a stream, and not preceded by >, so IS a source
 				type = ModuleType.source;
 			}
@@ -184,19 +236,59 @@ public class XDStreamParser implements XDParser {
 		return (type == null) ? null : verifyModuleOfTypeExists(moduleName, type);
 	}
 
-	private ModuleDeploymentRequest convertToCompositeIfNecessary(ModuleDeploymentRequest request) {
-		ModuleDefinition def = moduleDefinitionRepository.findByNameAndType(request.getModule(), request.getType());
+	/**
+	 * Return a {@link org.springframework.xd.dirt.module.ModuleDeploymentRequest}
+	 * per the specifications indicated by the provided builder. If the module
+	 * is a composite module, the children modules are also built and included
+	 * under {@link org.springframework.xd.dirt.module.ModuleDeploymentRequest#getChildren()}.
+	 *
+	 * @param builder builder object
+	 * @return new instance of {@code ModuleDeploymentRequest}
+	 */
+	private ModuleDeploymentRequest buildModuleDeploymentRequest(ModuleDeploymentRequest.Builder builder) {
+		ModuleDefinition def = moduleDefinitionRepository.findByNameAndType(builder.getModuleName(), builder.getType());
 		if (def != null && def.getDefinition() != null) {
-			List<ModuleDeploymentRequest> composedModuleRequests = parse(def.getName(), def.getDefinition(),
-					ParsingContext.module);
-			request = new CompositeModuleDeploymentRequest(request, composedModuleRequests);
+			List<ModuleDeploymentRequest> children = parse(def.getName(), def.getDefinition(), ParsingContext.module);
+
+			// Preserve the options set for the "parent" module in the parameters map
+			Map<String, String> parameters = new HashMap<String, String>(builder.getParameters());
+
+			// Pretend that options were set on the composed module itself
+			// (eases resolution wrt defaults later)
+			for (ModuleDeploymentRequest child : children) {
+				for (String key : child.getParameters().keySet()) {
+					String prefix = child.getModuleName() + CompositeModule.OPTION_SEPARATOR;
+					builder.setParameter(prefix + key, child.getParameters().get(key));
+				}
+			}
+
+			// This is to copy options from parent to this (which may override
+			// what was set above)
+			for (Map.Entry<String, String> entry : parameters.entrySet()) {
+				builder.setParameter(entry.getKey(), entry.getValue());
+			}
+
+			// Since ModuleDeploymentRequest is immutable, the children created
+			// by the parse method above have to be recreated since the group
+			// name needs to be modified
+			List<ModuleDeploymentRequest> list = new ArrayList<ModuleDeploymentRequest>();
+			for (ModuleDeploymentRequest child : children) {
+				ModuleDeploymentRequest.Builder childBuilder =
+						ModuleDeploymentRequest.Builder.fromModuleDeploymentRequest(child);
+				childBuilder.setGroup(builder.getGroup() + "." + child.getModuleName());
+				list.add(childBuilder.build());
+			}
+
+			builder.addChildren(list);
 		}
-		return request;
+		return builder.build();
 	}
 
 	/**
-	 * Asserts that there exists a module with the given name and type (trying each one in order) and returns that type,
-	 * fails otherwise.
+	 * Asserts that there exists a module with the given name and type
+	 * (trying each one in order) and returns that type; fails otherwise.
+	 *
+	 * @throws NoSuchModuleException if the module does not exist
 	 */
 	private ModuleType verifyModuleOfTypeExists(String moduleName, ModuleType... candidates) {
 		for (ModuleType type : candidates) {
